<resources>
    <string name="app_name">Pokédex</string>
    <string name="terug">Terug</string>
    <string name="placeholder">Placeholder</string>
    <string name="weight">Weight:</string>
    <string name="height">Height:</string>
    <string name="number">Number:</string>
    <string name="naam">Naam</string>
    <string name="favorieten">Favorieten</string>
    <string name="pokemons">Pokemons</string>
    <string name="mijn_team">Mijn Team</string>
    <string name="about">About</string>
    <string name="nummer">Nummer</string>
    <string name="gewicht">Gewicht</string>
    <string name="hoogte">Hoogte</string>
    <string name="type">Type</string>
    <string name="vaardigheden">Vaardigheden</string>
    <string name="statistieken">Statistieken</string>
    <string name="hp">HP</string>
    <string name="attack">Attack</string>
    <string name="defense">Defense</string>
    <string name="sp_atk">Sp. Atk</string>
    <string name="sp_def">Sp. Def</string>
    <string name="speed">Speed</string>
    <string name="total">Total</string>
    <string name="_90">90</string>
    <string name="_00">00</string>
    <string name="toevoegen_aan_mijn_team">Toevoegen aan mijn team</string>
    <string name="verwijder_uit_team">Verwijder uit mijn team</string>
    <string name="number_format">%03d</string>
    <string name="moveset">Moveset</string>
    <string name="move_level">Level %s</string>
    <string name="count_tag">%s Pokemons</string>
    <string name="pokemon_zoeken">Pokemon zoeken</string>
</resources>