<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="vm"
            type="app.wise.pokedex.main.detail.DetailViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".main.detail.DetailFragment"
        android:orientation="vertical"
        android:background="@drawable/favorites_gradient">

        <LinearLayout
            android:id="@+id/detail_banner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="10dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_chevron_left"
                android:layout_marginStart="9dp"
                android:layout_gravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/terug"
                android:textSize="17sp"
                android:layout_marginStart="5dp"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/pokemon_name_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="17sp"
                android:text="@string/placeholder"
                android:textColor="@color/white"
                android:textAlignment="center"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"/>

            <ImageView
                android:id="@+id/favorite_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_favorite"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <ImageView
                android:id="@+id/pokemon_detail_image"
                android:layout_width="207dp"
                android:layout_height="207dp"
                android:src="@drawable/ic_pokeball"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/search_text"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/number"
                    android:textColor="@color/white"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5dp"/>

                <TextView
                    android:id="@+id/pokemon_detail_number_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/placeholder"
                    android:textColor="@color/white"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/weight"
                    android:textColor="@color/white"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5dp"/>

                <TextView
                    android:id="@+id/pokemon_detail_weight_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/placeholder"
                    android:textColor="@color/white"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/height"
                    android:textColor="@color/white"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5dp"/>

                <TextView
                    android:id="@+id/pokemon_detail_height_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/placeholder"
                    android:textColor="@color/white"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5dp"/>
            </LinearLayout>
        </LinearLayout>


    </LinearLayout>
</layout>
